<resources>
    <string name="app_name">Вестник колледжа</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user">Пользователь</string>
    <string name="get_photo">Фото с камеры</string>
    <string name="pick_from_gallery">Загрузить из галереи</string>
    <string name="greet">18КСК</string>
    <string name="no_connection">А где интернет?\nНажмите в любом месте, чтобы обновить</string>
    <string name="refresh">Обновить</string>
    <string name="my_nick">by AlexFlex</string>
    <string name="are_u_sure">Нажмите ещё раз, чтобы выйти</string>
    <string name="tehnikum">tehnikum</string>
    <string name="warning">Внимание!</string>
    <string name="invalid_link">Неправильная ссылка!\nПохоже, ссылка на новость отсутствует на сайте.</string>
    <string name="other_stuff">Прочее</string>
    <string name="notifications_itk">Уведомления ИТК</string>
    <string name="settings">Настройки</string>
    <string name="update_interval">Интервал обновления</string>
    <string name="times_per_minutes">Раз в 5 минут</string>
    <string name="what_is_this">Теперь Вы будете получать уведомления о новых записях на сайте колледжа.</string>
    <string name="okay">OK</string>
    <string name="cancel">Отмена</string>
    <string name="n_on">Уведомления включены</string>
    <string name="n_off">Уведомления отключены</string>
    <string name="input_interval">Раз во сколько минут проверять обновления?</string>
    <string name="placeholder">Раз в ? минут</string>
    <string name="wrong_input">Введены неверные данные</string>
    <string name="too_big_or_small_rest">Значение должно быть в пределах от 1 до 1440</string>
    <string name="restart_service">Выключите и включите уведомления ещё раз для вступления изменений в силу</string>
    <string name="raz_v_minut">Раз в %1$d минут</string>
    <string name="updates_on_site">Обновления на сайте</string>
    <string name="no_internet">Нет подключения к интернету</string>
    <string name="wait_please">Подождите…</string>
    <string name="server_not_available">Сервер недоступен</string>
    <string name="SNA_not_expanded">Проблемы с доступом</string>
    <string name="SNA_expanded">Похоже, сервер временно недоступен.\nМожете пойти заварить чай, пока мы решаем проблему</string>
    <string name="search">Поиск</string>
    <string name="about_app">О приложении</string>
    <string name="info">Если приложение работает,\nТо его написал я,\nА если нет, то не знаю,\nКто его написал.</string>
    <string name="no_activity">Приложения не найдено</string>
    <string name="open_in_browser">Открыть в браузере</string>
    <string name="test_notification">Тестовое уведомление</string>
    <string name="no_server">Беды с сервером :(</string>

    <string name="news">Новостная лента</string>
    <string name="message">Новость</string>
    <string name="history">История</string>
    <string name="graphic">Расписание</string>
    <string name="subjects">Дисциплины</string>
    <string name="docs">Документы</string>
    <string name="abit">Абитуриенту</string>
    <string name="stud">Студенту</string>
    <string name="network">Сетевое образование</string>

    <string name="iti">ИТИ</string>
    <string name="itk">ИТК</string>
    <string name="not_native_system">Для работы фонового сорвиса требуется, чтобы Вы добавили данное приложение в белый список вашего Power Manager\'а</string>

    <string name="copied_to_clipboard">Ссылка на запись скопирована в буфер обмена</string>

    <string name="messaging">Messaging [In Test]</string>
    <string name="you_are_authorized">Вы авторизованы</string>
    <string name="you_are_not_authorized">Вы не авторизованы</string>
    <string name="write_smth">Напиши что-нибудь</string>
    <string name="gms_not_found">Не найдены сервисы Google Play. Желаете установить их?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>
