<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Switch
        android:id="@+id/notify_switcher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/notifications_itk"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/extended_params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/notify_switcher">

        <TextView
            android:id="@+id/interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_interval"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/more_on_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/times_per_minutes"
            android:textColor="#000000" />
    </LinearLayout>

    <Button
        android:id="@+id/test_notif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Autumn1"
        android:text="@string/test_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>